--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body style="background: #000000">
-    <div id="app"></div>
+    <div id="wewetap-app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
